# interview_algorithms_solutions

./: CMakeLists.txt
include/: ArrayQuestions.h  LinkedList.h  Trees.h  include.h
src/: ArrayQuestions.cpp  LinkedList.cpp  Trees.cpp  main.cpp
